--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,10 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="header"></div>
-    <div id="menu-root"></div>
+    <!-- <div id="menu-root"></div> -->
     <div id="main-content"></div>
     <div id="footer"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
