--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
     </noscript>
     <div id="header"></div>
     <!-- <div id="menu-root"></div> -->
+    <div id="sub-content"></div>
     <div id="main-content"></div>
     <div id="footer"></div>
     <div id="root"></div>
