--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
     <div id="main-content"></div>
     <div id="footer"></div>
     <div id="root"></div>
+    <div id="modeluser"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
